[gd_scene load_steps=3 format=3 uid="uid://bifeekbl51eaj"]

[ext_resource type="Script" uid="uid://bgqjaa84kevs8" path="res://scores.gd" id="1_6ufno"]
[ext_resource type="FontFile" uid="uid://fy4as8fu8sms" path="res://DINAlternate-Bold.ttf" id="2_royol"]

[node name="Scores" type="Node2D"]
script = ExtResource("1_6ufno")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="P1Label" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 890.0
offset_top = -265.0
offset_right = 1030.0
offset_bottom = -130.0
theme_override_colors/font_color = Color(1, 0.313726, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_royol")
theme_override_font_sizes/font_size = 96
text = "P1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P1Score" type="Label" parent="CanvasLayer/P1Label"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
offset_left = -80.0
offset_top = 130.0
offset_right = 150.0
offset_bottom = 265.0
theme_override_colors/font_color = Color(0.392157, 0.392157, 0.392157, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_royol")
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2Label" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 890.0
offset_top = 1210.0
offset_right = 1030.0
offset_bottom = 1345.0
theme_override_colors/font_color = Color(0, 0.313726, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_royol")
theme_override_font_sizes/font_size = 96
text = "P2:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2Score" type="Label" parent="CanvasLayer/P2Label"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
offset_left = -80.0
offset_top = -130.0
offset_right = 150.0
offset_bottom = 5.0
theme_override_colors/font_color = Color(0.392157, 0.392157, 0.392157, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_royol")
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer1" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer1" to="." method="_on_timer_1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
